<resources>
    <string name="app_name">ElectionApp</string>
    <string name="login_email">Enter Your Email...</string>
    <string name="login_password">Enter Your Password...</string>
    <string name="Login_Btn">SIGN IN</string>
    <string name="login_phone_btn">SIGN IN USING PHONE NUMBER</string>
    <string name="create_account">CREATE AN ACCOUNT</string>
    <string name="cofirm_password">Confirm Password...</string>
    <string name="reg_account_btn">REGISTER</string>
    <string name="reg_login_btn">Already Registered? Sign in</string>
    <string name="login_phone">Enter Your Phone Number</string>
    <string name="OTP">Enter OTP</string>
    <string name="resend_OTP">Resend OTP</string>
    <string name="send_OTP">SEND OTP</string>
</resources>