<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_bright"
    tools:context=".LoginActivity">

    <EditText
        android:id="@+id/login_email_ID"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:ems="10"
        android:hint="@string/login_email"
        android:inputType="textEmailAddress"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.184"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/login_password_ID"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:ems="10"
        android:hint="@string/login_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_email_ID"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:background="@android:color/holo_red_light"
        android:text="@string/Login_Btn"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_password_ID"
        app:layout_constraintVertical_bias="0.062" />

    <Button
        android:id="@+id/Login_phone_Btn"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:background="@android:color/holo_red_light"
        android:text="@string/login_phone_btn"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_btn"
        app:layout_constraintVertical_bias="0.04" />

    <Button
        android:id="@+id/login_create_acc_btn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@android:color/holo_red_light"
        android:text="@string/create_account"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Login_phone_Btn"
        app:layout_constraintVertical_bias="0.871" />
</androidx.constraintlayout.widget.ConstraintLayout>