<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_bright"
    tools:context=".CreateAccountActivity">

    <EditText
        android:id="@+id/reg_email_field"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:ems="10"
        android:hint="@string/login_email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.067" />

    <EditText
        android:id="@+id/reg_password_field"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:ems="10"
        android:hint="@string/login_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_email_field"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/reg_confirm_password_field"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:ems="10"
        android:hint="@string/cofirm_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_password_field"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/create_acc_btn"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:background="@android:color/holo_red_light"
        android:text="@string/reg_account_btn"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_confirm_password_field"
        app:layout_constraintVertical_bias="0.076" />

    <Button
        android:id="@+id/reg_login_btn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@android:color/holo_red_light"
        android:text="@string/reg_login_btn"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_acc_btn"
        app:layout_constraintVertical_bias="0.846" />
</androidx.constraintlayout.widget.ConstraintLayout>