<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_bright"
    tools:context=".LoginPhoneActivity">

    <com.rilixtech.widget.countrycodepicker.CountryCodePicker
        android:id="@+id/ccp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.236" />

    <EditText
        android:id="@+id/phone_number_edt"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/login_phone"
        android:inputType="phone"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ccp"
        app:layout_constraintVertical_bias="0.062"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/OTP_text"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:ems="10"
        android:hint="@string/OTP"
        android:inputType="number"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.079"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone_number_edt"
        app:layout_constraintVertical_bias="0.0"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/resend_otp_btn"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:background="@android:color/holo_red_light"
        android:text="@string/resend_OTP"
        android:textColor="@android:color/white"
        android:visibility="invisible"
        android:enabled="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toEndOf="@+id/OTP_text"
        app:layout_constraintTop_toBottomOf="@+id/phone_number_edt"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/send_otp_btn"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:background="@android:color/holo_red_light"
        android:text="@string/send_OTP"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/OTP_text"
        app:layout_constraintVertical_bias="0.187" />

</androidx.constraintlayout.widget.ConstraintLayout>